Fixed overlapping of about and experience

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-.dark {
-  background-color: black;
-  color: white;
-  text-decoration: none;
-  text-decoration-color: white;
-}
-
-.light
-{
-  color: black;
-  text-decoration: none;
-  text-decoration-color: black;
-}
 .dark, .light {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
