--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@
   padding: 0;
 }
 
+
+html, body
+{
+  height: 100%;
+  width: 100%;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -25,4 +31,18 @@ p  {
 
 a .btn{
   transition: all 300ms ease;
+}
+
+.dark {
+  background-color: black;
+  color: white;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.light
+{
+  color: black;
+  text-decoration: none;
+  text-decoration-color: black;
 }
